--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "jstransformer-nunjucks": "^1.0.0",
     "marked": "^4.0.12",
     "metalsmith": "^2.4.1",
-    "metalsmith-assets": "^0.1.0",
     "metalsmith-debug-ui": "^0.3.2",
     "metalsmith-html-minifier": "^4.0.1",
     "metalsmith-if": "^0.1.1",
     "metalsmith-metadata": "^0.0.4",
-    "metalsmith-prism": "^3.1.1"
+    "metalsmith-prism": "^3.1.1",
+    "metalsmith-static-files": "^0.1.0"
   },
   "engines": {
     "node": ">=14.0.0"
