--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "metalsmith-starter-default",
-  "version": "0.0.2",
-  "description": "A bare-bones Metalsmith starter",
+  "name": "metalsmith-blog-starter",
+  "version": "0.1.0",
+  "description": "A simple Metalsmith blog starter",
   "keywords": [
     "metalsmith",
     "starter"
@@ -12,7 +12,8 @@
     "start": "cross-env NODE_ENV=development NODE_PATH=./node_modules npm run watch & npm run serve",
     "build": "cross-env NODE_ENV=production node metalsmith.js",
     "watch": "nodemon metalsmith.js",
-    "serve": "browser-sync start --server 'build' --files 'build/**'"
+    "serve": "browser-sync start --server 'build' --files 'build/**'",
+    "lint": "eslint --fix ."
   },
   "nodemonConfig": {
     "watch": [
@@ -22,25 +23,26 @@
     "ext": "js css scss njk json html md"
   },
   "devDependencies": {
-    "browser-sync": "^2.27.7",
+    "browser-sync": "^2.27.10",
     "cross-env": "^7.0.3",
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "nodemon": "^2.0.15",
-    "prettier": "^1.19.1"
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1"
   },
   "dependencies": {
-    "@metalsmith/collections": "^1.2.2",
+    "@metalsmith/collections": "^1.3.0",
     "@metalsmith/drafts": "^1.2.0",
     "@metalsmith/layouts": "^2.6.0",
     "@metalsmith/markdown": "^1.6.0",
+    "@metalsmith/metadata": "^0.1.0",
     "@metalsmith/permalinks": "^2.4.0",
     "jstransformer-nunjucks": "^1.1.0",
-    "marked": "^4.1.0",
-    "metalsmith": "^2.5.0",
+    "marked": "^4.1.1",
+    "metalsmith": "^2.5.1",
     "metalsmith-debug-ui": "^0.3.2",
     "metalsmith-html-minifier": "^4.0.1",
     "metalsmith-if": "^0.1.1",
