--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "author": "werner@glinka.co",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development NODE_PATH=./node_modules npm run watch & npm run serve",
+    "start": "cross-env NODE_ENV=development node ./scripts/watch.js",
     "build": "cross-env NODE_ENV=production node metalsmith.js",
-    "watch": "nodemon metalsmith.js",
-    "serve": "browser-sync start --server 'build' --files 'build/**'",
+    "serve": "browser-sync start --server 'build'",
     "lint": "eslint --fix ."
   },
   "nodemonConfig": {
@@ -24,13 +23,13 @@
   },
   "devDependencies": {
     "browser-sync": "^2.27.10",
+    "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.25.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^2.0.20",
     "prettier": "^2.7.1"
   },
   "dependencies": {
