--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,3 +9,8 @@ rules:
   no-unused-expressions: 0
   no-restricted-syntax: 0
   no-nested-ternary: 0
+parserOptions:
+  ecmaVersion: 2022
+  sourceType: module
+  ecmaFeatures:
+    modules: true
